--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
               <li class="active"><a href="/school_info">普通院校信息查询</a></li>
               <li class="active"><a href="/recommend_school/">学校推荐</a></li>
               <li class="active"><a href="/recommend_profession/">专业推荐</a></li>
-              <!-- 新增 -->
+              <!--易惜：新增导航栏-->
               <li class="active"><a href="/admission_trends/">历年录取数据对比</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
