dongjing-new function

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
               <li class="active"><a href="/school_info">普通院校信息查询</a></li>
               <li class="active"><a href="/recommend_school/">学校推荐</a></li>
               <li class="active"><a href="/recommend_profession/">专业推荐</a></li>
+              <li class="active"><a href="/major_popularity/">专业热度趋势</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% if request.session.is_login %}
