--- a/recommend_profession/templates/recommend_profession.html
+++ b/recommend_profession/templates/recommend_profession.html
@@ -1,103 +1,96 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化推荐专业页面，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
-
-{# 替换内容 #}
+{% block title %}推荐专业{% endblock %}
 {% block content %}
-
-
 <script type="text/javascript">
-// 定义页面刷新函数：延迟500毫秒后强制刷新当前页面
-function reload() {
-    setTimeout(function(){
-        //true表示强制从服务器重新加载，不使用缓存
-        location.reload(true);
-    }, 500);    // 延迟500毫秒执行刷新
-}
+    function reload() {
+        setTimeout(function () {
+            location.reload(true);
+        }, 500);
+    }
 </script>
 <script>
-        // 根据专业类别（x）动态生成该类别下的专业列表HTML
-        function getProfessionDetail(x)
-        {
-            // 获取后端传递的专业数据（pro_js是后端变量，通过|safe过滤器确保HTML安全解析）
-            var y = {{ pro_js|safe }};
-            // 初始化HTML字符串：包含类别标题和表格结构（使用Bootstrap表格样式）
-            var message = '<h4>'+x+'</h4></br>' +
-                '<table class="table table-bordered table-hover table-striped" width="600px">';
-            var count = 0;  // 计数变量：用于控制表格每行显示的专业数量
-            const col = 3;  // 定义表格每行显示3个专业
-            // 遍历所有专业数据，筛选出属于当前类别（x）的专业
-            for (var i = 0; i < y.length; i++) {    
-                if(y[i]['fields']['type1'] === x){  // 匹配专业类别
-                    {#console.log(count, count%2)#}
-                    // 每满col个专业，新增一行表格
-                    if(count%col === 0){
-                        message = message + '<tr height="30px">';
-                        // 拼接专业链接：点击后调用reload()刷新页面，跳转至专业详情页
-                        message = message + '<td><a onclick="reload()" target="_blank" href="../profession/'+y[i]['fields']['profession_name']+'专业">'
-                    +y[i]['fields']['profession_name'] + '</a></td>';
-                    }
-                    else {
-                        // 非行首时直接拼接专业链接
-                        message = message + '<td><a onclick="reload()" target="_blank" href="../profession/'+y[i]['fields']['profession_name']+'专业">'
-                    +y[i]['fields']['profession_name'] + '</a></td>';
-                    }
-                    // 每满col个专业，结束当前行
-                    if(count%col === col-1){
-                        message = message+'</tr>';
-                    }
-                    count++;    // 计数递增
-                    {#console.log(y[i]['fields']['type1']);#}
+    function getProfessionDetail(x) {
+        var y = {{ pro_js|safe }};
+        var message = '<h4>' + x + '</h4><br>' +
+            '<table class="table table-bordered table-hover table-striped" width="600px">';
+        var count = 0;
+        const col = 3;
+        for (var i = 0; i < y.length; i++) {
+            if (y[i]['fields']['type1'] === x) {
+                if (count % col === 0) {
+                    message = message + '<tr height="30px">';
+                    message = message + '<td><a onclick="reload()" target="_blank" href="../profession/' + y[i]['fields']['profession_name'] + '专业">'
+                        + y[i]['fields']['profession_name'] + '</a></td>';
                 }
+                else {
+                    message = message + '<td><a onclick="reload()" target="_blank" href="../profession/' + y[i]['fields']['profession_name'] + '专业">'
+                        + y[i]['fields']['profession_name'] + '</a></td>';
+                }
+                if (count % col === col - 1) {
+                    message = message + '</tr>';
+                }
+                count++;
             }
-            // 将生成的HTML插入到页面id为"profession_message"的容器中
-            let div = document.getElementById('profession_message');
-            div.innerHTML = message;
-
-
         }
-    </script>
-    <div class="container-fluid row">
-        {# 左侧导航栏专业大类 #}
-        <div class="container-fluid col-sm-2">
-            <div class="span3">
-                <ul class="nav nav-list well">
-                    <li class="nav-header">
-                        <h4>专业类别</h4>
-                    </li>
-                    {% for foo in type1 %}
-                        <li class="active">
-                            <button id="{{ foo }}" class="btn btn-info" style="width: 170px; font-size: large; padding-top: 4px; padding-bottom: 4px; margin-top: 5px" onclick="getProfessionDetail('{{ foo }}')">{{ foo }}</button>
+        let div = document.getElementById('profession_message');
+        div.innerHTML = message;
+    }
+</script>
+<div class="container-fluid" style="margin-top: 30px;">
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>专业类别</h4>
+                </div>
+                <div class="panel-body">
+                    <ul class="nav nav-pills nav-stacked">
+                        {% for foo in type1 %}
+                        <li>
+                            <button id="{{ foo }}" class="btn btn-info btn-block" style="margin-bottom: 5px;"
+                                onclick="getProfessionDetail('{{ foo }}')">{{ foo }}</button>
                         </li>
-                    {% endfor %}
-                </ul>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
-	    <div class="container-fluid col-sm-7">
-            <div id="profession_message">
-                <script>
-                    getProfessionDetail('工学')
-                </script>
+        <div class="col-sm-7">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>专业列表</h4>
+                </div>
+                <div class="panel-body">
+                    <div id="profession_message">
+                        <script>
+                            getProfessionDetail('工学')
+                        </script>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="container-fluid col-sm-3">
-            <h4>专业推荐</h4>
-        {% if have_done %}
-            <h4>请完成<a href="../analysis/">性格测试</a>，专业推荐效果更佳</h4>
-        {% endif %}
-            <li>
-                {% for foo in profession_hot %}
-                    <a target="_blank" href="../profession/{{ foo.profession_name }}专业"><ul>{{ foo.profession_name }}</ul></a>
-                {% endfor %}
-
-            </li>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>专业推荐</h4>
+                </div>
+                <div class="panel-body">
+                    {% if have_done %}
+                    <div class="alert alert-warning">
+                        请完成<a href="../analysis/">性格测试</a>，专业推荐效果更佳
+                    </div>
+                    {% endif %}
+                    <ul class="list-group">
+                        {% for foo in profession_hot %}
+                        <li class="list-group-item">
+                            <a target="_blank" href="../profession/{{ foo.profession_name }}专业">{{ foo.profession_name}}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-
-        <div class="well" style="height: 100px"></div>
+</div>
 {% endblock %}
