--- a/recommend_school/templates/recommend_school.html
+++ b/recommend_school/templates/recommend_school.html
@@ -1,45 +1,74 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化推荐学校页面，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
-
-{# 替换内容 #}
+{% block title %}推荐学校{% endblock %}
 {% block content %}
 <div class="container">
-<div id="select_school">
-    <form class="form-inline" action="" method="post" novalidate>
-        {% csrf_token %}
-        {% for foo in school_form %}
-            <div class="form-group">
-                <label for="exampleInputEmail1">{{ foo.label }}</label>
-                {{ foo }}
+    <div class="row" style="margin-top: 30px;">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">学校推荐查询</h3>
+                </div>
+                <div class="panel-body">
+                    <form class="form-inline" action="" method="post" novalidate>
+                        {% csrf_token %}
+                        {% for foo in school_form %}
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">{{ foo.label }}</label>
+                            {{ foo }}
+                        </div>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary">查询</button>
+                    </form>
+                </div>
             </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-primary">提交</button>
-    </form>
+
+            {% if schools %}
+            <div class="panel panel-default" style="margin-top: 20px;">
+                <div class="panel-heading">
+                    <h4 class="panel-title">推荐学校列表</h4>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-bordered table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th>院校名称</th>
+                                <th>院校排名</th>
+                                <th>省份</th>
+                                <th>城市</th>
+                                <th>985</th>
+                                <th>211</th>
+                                <th>自招</th>
+                                <th>考生类别</th>
+                                <th>录取批次</th>
+                                <th>2018年最低分</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for school in schools %}
+                            <tr>
+                                <td><a href="/school_info/{{ school.school_name }}">{{ school.school_name }}</a></td>
+                                <td>{{ school.school_rank }}</td>
+                                <td>{{ school.school_province }}</td>
+                                <td>{{ school.school_city }}</td>
+                                <td>{{ school.type_985 }}</td>
+                                <td>{{ school.type_211 }}</td>
+                                <td>{{ school.type_self }}</td>
+                                <td>{{ school.student_type }}</td>
+                                <td>{{ school.epoch }}</td>
+                                <td>{{ school.lowest_score }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            {% endif %}
+
+            <div class="alert alert-info" style="margin-top: 20px;">
+                推荐的学校分数与您相差较大？前往<a href="../student_info/"> 个人信息 </a>修改您的高考分数
+            </div>
+        </div>
+    </div>
 </div>
-<table class="table table-bordered table-hover table-striped ">
-    <tr><th>院校名称</th><th>院校排名</th><th>省份</th><th>城市</th><th>985</th><th>211</th><th>自招</th>
-    <th>考生类别</th><th>录取批次</th><th>2018年最低分</th></tr>
-    {% for school in schools %}
-    <tr>
-        <td><a href="/school_info/{{ school.school_name }}">{{ school.school_name }}</a></td>
-        <td>{{ school.school_rank }}</td>
-        <td>{{ school.school_province }}</td>
-        <td>{{ school.school_city }}</td>
-        <td>{{ school.type_985 }}</td>
-        <td>{{ school.type_211 }}</td>
-        <td>{{ school.type_self }}</td>
-        <td>{{ school.student_type }}</td>
-        <td>{{ school.epoch }}</td>
-        <td>{{ school.lowest_score }}</td>
-    </tr>
-    {% endfor %}
-</table>
-</div>
-    <div class="col-md-offset-2">推荐的学校分数与您相差较大？前往<a href="../student_info/"> 个人信息 </a>修改您的高考分数</div>
 {% endblock %}
