--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,51 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化首页，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
-
-{# 替换内容 #}
+{% block title %}首页{% endblock %}
 {% block content %}
-                <div class="carousel slide col-md-8 col-md-offset-2" id="carousel-851425">
-                  <ol class="carousel-indicators">
-                    <li class="" data-slide-to="0" data-target="#carousel-851425"></li>
-                    <li data-slide-to="1" data-target="#carousel-851425" class="active"></li>
-                    <li data-slide-to="2" data-target="#carousel-851425" class=""></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="item"> <img height="50%" width="100%" alt="" src="./static/image/3.jpg">
-                      <div class="carousel-caption" contenteditable="true">
-                        <h4>静好</h4>
-                        <p> 或许将来的某一天我会失去方向，或许将来的某一天我会忘记梦想，可那又怎样，总有一天我会迎来属于我的希望。不去期求我的大学生活会轰轰烈烈，在大学，我宁愿守着一份静好，在安静中不慌不忙的坚强，成长。</p>
-                      </div>
+<div class="container" style="margin-top: 30px;">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="carousel slide" id="carousel-851425" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-851425" data-slide-to="0"></li>
+                    <li data-target="#carousel-851425" data-slide-to="1" class="active"></li>
+                    <li data-target="#carousel-851425" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item">
+                        <img src="/static/image/3.jpg" alt="静好" style="width: 100%; height: 400px;">
+                        <div class="carousel-caption">
+                            <h4>静好</h4>
+                            <p>或许将来的某一天我会失去方向，或许将来的某一天我会忘记梦想，可那又怎样，总有一天我会迎来属于我的希望。不去期求我的大学生活会轰轰烈烈，在大学，我宁愿守着一份静好，在安静中不慌不忙的坚强，成长。
+                            </p>
+                        </div>
                     </div>
-                    <div class="item active"> <img height="50%" width="100%" alt="" src="./static/image/2.jpg">
-                      <div class="carousel-caption" contenteditable="true">
-                        <h4>美好的大学生活</h4>
-                        <p>大学生活是雨，它没有思想也没有语言，但我爱雨的随心所欲，即使它使我无声的泪水在天空中飞翔。</p>
-                      </div>
+                    <div class="item active">
+                        <img src="/static/image/2.jpg" alt="美好的大学生活" style="width: 100%; height: 400px;">
+                        <div class="carousel-caption">
+                            <h4>美好的大学生活</h4>
+                            <p>大学生活是雨，它没有思想也没有语言，但我爱雨的随心所欲，即使它使我无声的泪水在天空中飞翔。</p>
+                        </div>
                     </div>
-                    <div class="item"> <img height="50%" width="100%" alt="" src="./static/image/1.jpg">
-                      <div class="carousel-caption" contenteditable="true">
-                        <h4>清华大学</h4>
-                        <p>自1911年清华学堂建立至今，97载春秋的发展历程，形成了清华大学独特的魅力和深厚的文化底蕴。“自强不息、厚德载物”的校训、“行胜于言”的校风和“严谨、勤奋、求实、创新”的学风构成了清华精神的核心内涵，也激励和鼓舞着一代代清华人为了中华民族的崛起与腾飞做出不息的努力。</p>
-                      </div>
+                    <div class="item">
+                        <img src="/static/image/1.jpg" alt="清华大学" style="width: 100%; height: 400px;">
+                        <div class="carousel-caption">
+                            <h4>清华大学</h4>
+                            <p>自1911年清华学堂建立至今，97载春秋的发展历程，形成了清华大学独特的魅力和深厚的文化底蕴。"自强不息、厚德载物"的校训、"行胜于言"的校风和"严谨、勤奋、求实、创新"的学风构成了清华精神的核心内涵，也激励和鼓舞着一代代清华人为了中华民族的崛起与腾飞做出不息的努力。
+                            </p>
+                        </div>
                     </div>
-                  </div>
-                  <a data-slide="prev" href="#carousel-851425" class="left carousel-control">‹</a> <a data-slide="next" href="#carousel-851425" class="right carousel-control">›</a> </div>
-
+                </div>
+                <a class="left carousel-control" href="#carousel-851425" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-851425" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
