--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,30 +1,36 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化登录页面，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
-
-{# 替换内容 #}
+{% block title %}登录{% endblock %}
 {% block content %}
-     <div class="container">
+<div class="container">
+    <div class="row">
         <div class="col-md-4 col-md-offset-4">
-          <form class='form-register' action="" method="post">
-              {% if error %}
-                  <div class="alert alert-warning">{{ error }}</div>
-              {% endif %}
-
-              <h2 class="text-center">登录</h2>
-                {% for item in login_form %}
-                    <div class="form-group">
-                        {{ item.label_tag }}
-                        {{ item }}
+            <div class="panel panel-default" style="margin-top: 50px;">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">用户登录</h3>
+                </div>
+                <div class="panel-body">
+                    {% if error %}
+                    <div class="alert alert-danger">
+                        <strong>错误：</strong>{{ error }}
                     </div>
-                {% endfor %}
-              <button type="submit" class="btn btn-primary pull-right">登录</button>
-          </form>
+                    {% endif %}
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {% for item in login_form %}
+                        <div class="form-group">
+                            {{ item.label_tag }}
+                            {{ item }}
+                        </div>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary btn-block">登录</button>
+                    </form>
+                    <div class="text-center" style="margin-top: 15px;">
+                        <p>还没有账号？<a href="/register/">立即注册</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
