--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -1,31 +1,43 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化注册页面，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
-
-{# 替换内容 #}
+{% block title %}注册{% endblock %}
 {% block content %}
-     <div class="container">
-        <div class="col-md-4 col-md-offset-4">
-          <form class='form-register' action="" method="post">
-              {% if error %}
-                  <div class="alert alert-warning">{{ error }}</div>
-              {% endif %}
-
-              <h2 class="text-center">欢迎注册</h2>
-                {% for item in register_form %}
-                    <div class="form-group">
-                        {{ item.label_tag }}
-                        {{ item }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-default" style="margin-top: 50px;">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">用户注册</h3>
+                </div>
+                <div class="panel-body">
+                    {% if error %}
+                    <div class="alert alert-warning">
+                        <strong>提示：</strong>{{ error }}
                     </div>
-                {% endfor %}
-              <button type="reset" class="btn btn-default pull-left">重置</button>
-              <button type="submit" class="btn btn-primary pull-right">提交</button>
-          </form>
+                    {% endif %}
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {% for item in register_form %}
+                        <div class="form-group">
+                            {{ item.label_tag }}
+                            {{ item }}
+                        </div>
+                        {% endfor %}
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button type="reset" class="btn btn-default btn-block">重置</button>
+                            </div>
+                            <div class="col-md-6">
+                                <button type="submit" class="btn btn-primary btn-block">提交</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="text-center" style="margin-top: 15px;">
+                        <p>已有账号？<a href="/login/">立即登录</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
