--- a/user/templates/student_info.html
+++ b/user/templates/student_info.html
@@ -1,28 +1,33 @@
-{# 继承 base.html #}
+<!--#林洋洋：优化学生信息页面，改进样式和用户体验-->
 {% extends "base.html" %}
-
-{# 替换title #}
-{% block title %}
-{{ title }}
-{% endblock %}
-
+{% block title %}修改个人信息{% endblock %}
 {% block content %}
- <div class="container">
-        <div class="col-md-4 col-md-offset-4">
-          <form class='form-register' action="" method="post">
-              {% if message %}
-                  <div class="alert alert-warning">{{ message }}</div>
-              {% endif %}
-
-              <h2 class="text-center">修改个人信息</h2>
-                {% for item in student_form %}
-                    <div class="form-group">
-                        {{ item.label_tag }}
-                        {{ item }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-default" style="margin-top: 50px;">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">修改个人信息</h3>
+                </div>
+                <div class="panel-body">
+                    {% if message %}
+                    <div class="alert alert-success">
+                        <strong>提示：</strong>{{ message }}
                     </div>
-                {% endfor %}
-              <button type="submit" class="btn btn-primary pull-right">确认</button>
-          </form>
+                    {% endif %}
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {% for item in student_form %}
+                        <div class="form-group">
+                            {{ item.label_tag }}
+                            {{ item }}
+                        </div>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary btn-block">确认修改</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
